This file lists bigger/noteworthy changes, only...

Version 1.2 (upcoming)
dyncall:
  o extended signature with more chars for calling convention switching (only for modes
    that coexist on a platform with other conventions)
  o made "formatted" call interface use calling convention signature chars
dynload:
  o fix to build with musl libc
doc:
  o manual now specifying calling convention signature chars
bindings:
  o python: Python 3 support, Python 2 unicode support, added get_path function, changing
    'Z' conversions to only immutable types and 'p' to mutable types (and handles), bytearray
	support, support to specify calling convention
tests:
  o extended callf testcode with to test calling convention mode switch signature chars

Version 1.1 (2020/01/11)
dyncall:
  o support for soft-float MIPS o32 & n64 (big- and little-endian, each)
  o x64 System V syscall support
dyncallback:
  o support for soft-float MIPS o32 & n64 (big- and little-endian, each)
dynload:
  o added UTF-8 support for pathnames on windows
  o reliability/stability fix for dlGetLibraryPath() on glibc based platforms (avoiding
    internal use of glibc's bad impl of dlinfo() which doesn't do any error checking at all)
  o Darwin/macos fix for dlGetLibraryPath() to correctly fail on bogus handles (did return
    paths to random libraries under some circumstances, instead of returning an error)
  o support for dlGetLibraryPath() on glibc platforms with glibc vesions <= 2.3.3
  o dlGetLibraryPath() now accepts NULL as argument to return path to executable
  o dlLoadLibrary() on windows: no more auto-suffixing of the .dll file ext anymore, to be
    more in line with other platforms (not affecting OS specific library search behaviour)
doc:
  o more detail in support matrix for bi-endian platforms
  o improvements/corrections to calling convention appendix
  o PPC64 calling convention description
  o MIPS64/N32 calling convention description
  o man page additions for clarity
tests: