@@ -214,11 +214,12 @@ The X86 platform provides a rich family of different calling conventions.
 void dcReset(DCCallVM* vm);
 \end{lstlisting}
 
-
-Resets the internal stack of arguments and prepares it for a new call.
-This function should be called after setting the call mode (using dcMode), but
-prior to binding arguments to the CallVM. Use it also when reusing a CallVM, as
-arguments don't get flushed automatically after a function call invocation.\\
+Resets the internal stack of arguments and prepares it for a new call. This
+function should be called after setting the call mode (using dcMode), but prior
+to binding arguments to the CallVM (except for when setting mode
+DC\_SIGCHAR\_CC\_ELLIPSIS\_VARARGS, which is used prior to binding varargs of
+variadic functions). Use it also when reusing a CallVM, as arguments don't get
+flushed automatically after a function call invocation.\\
 Note: you should also call this function after initial creation of the a CallVM
 object, as dcNewCallVM doesn't do this, implicitly.\\
 
